# microstructure_lead_lag_relationships

./: .gitignore  CMakeLists.txt  Code_Analysis  Dockerfile  README.md  docker-compose-simple.yml  docker-compose.yml  docker_fixes.sh  dockerfile  fix_code.sh
config/: config.json
include/: config.hpp  types.hpp
output/: lead_lag_results.txt
scripts/: download_polygon.sh
src/: main.cpp
src/cpu/: simd_correlation.cpp  simd_correlation.hpp
src/cuda/: lead_lag_kernel.cu  lead_lag_kernel.cuh
src/data/: polygon_loader.cpp  polygon_loader.hpp
src/visualization/: dashboard.py  realtime_plot.cpp  realtime_plot.hpp
